# bevy_granite

./: Cargo.toml  README.md
crates/bevy_granite_core/: Cargo.toml
crates/bevy_granite_core/src/assets/materials/: definition.rs  load.rs
crates/bevy_granite_core/src/entities/: component_editor.rs
crates/bevy_granite_core/src/entities/editable/types/camera_3d/: creation.rs  mod.rs  plugin.rs  ui.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/spot_light/: ui.rs
crates/bevy_granite_core/src/world/: save.rs
crates/bevy_granite_editor/: Cargo.toml
crates/bevy_granite_editor/config/: config.toml
crates/bevy_granite_editor/src/: setup.rs
crates/bevy_granite_editor/src/editor_state/: dock.rs  mod.rs  plugin.rs
crates/bevy_granite_editor/src/interface/layout/: dock.rs
crates/bevy_granite_editor/src/interface/shared/widgets/: combobox.rs
crates/bevy_granite_editor/src/interface/tabs/editor_settings/: ui.rs
crates/bevy_granite_editor/src/interface/tabs/entity_editor/widgets/: material_editor.rs  transform_editor.rs
crates/bevy_granite_editor/src/interface/tabs/node_tree/: rendering.rs
crates/bevy_granite_editor/src/viewport/camera/: system.rs
crates/bevy_granite_expose/: Cargo.toml
crates/bevy_granite_gizmos/: Cargo.toml
crates/bevy_granite_gizmos/src/gizmos/vertex/: config.rs  interaction.rs  plugin.rs  spawn.rs
crates/bevy_granite_gizmos/src/selection/: duplicate.rs  manager.rs  plugin.rs
crates/bevy_granite_logging/: Cargo.toml
crates/bevy_granite_macros/: Cargo.toml
src/: lib.rs
