[package]
edition = "2021"
name = "bevy_granite_core"
version = "0.3.0"

[dependencies]
bevy = {workspace = true, features = ["bevy_pbr", "bevy_post_process", "bevy_core_pipeline", "png", "jpeg", "tga", "reflect_auto_register"]}
bevy-inspector-egui = {workspace = true}
bevy_egui = {workspace = true}
bevy_obj = {workspace = true}
lazy_static = {workspace = true}
native-dialog = {workspace = true}
ron = {workspace = true}
serde = {workspace = true}
toml = {workspace = true}
uuid = {workspace = true}

bevy_granite_logging = {path = "../bevy_granite_logging"}
bevy_granite_macros = {path = "../bevy_granite_macros"}

bitflags = "*"
enum_dispatch = "0.3.13"

[lib]
name = "bevy_granite_core"
path = "src/lib.rs"
