[package]
name = "bevy_granite_editor"
version = "0.3.1"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_winit"]}
toml = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_egui = { workspace = true }
bevy_obj = { workspace = true }
uuid = { workspace = true }
serde = { workspace =  true}
native-dialog = { workspace = true }
ron = { workspace = true }
lazy_static = { workspace = true }
arboard = "3.4"

bevy_granite_gizmos = { path = "../bevy_granite_gizmos"}
bevy_granite_core = { path = "../bevy_granite_core"}
bevy_granite_logging = { path = "../bevy_granite_logging"}
bevy_granite_expose = { path = "../bevy_granite_expose" }
bevy_granite_macros = { path = "../bevy_granite_macros" }

egui_dock = {version = "0.18.0", features = ["serde"]}
webbrowser = "1.0.5"

[lib]
name = "bevy_granite_editor"
path = "src/lib.rs"
