[package]
name = "bevy_granite_gizmos"
version = "0.3.1"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_picking"] }
bevy_egui = { workspace = true }
bevy_obj = { workspace = true }
native-dialog = { workspace = true }
uuid = { workspace = true }
bevy-inspector-egui = { workspace = true }

bevy_granite_logging = { path = "../bevy_granite_logging"}
bevy_granite_core = { path = "../bevy_granite_core"}

[lib]
name = "bevy_granite_gizmos"
path = "src/lib.rs"
